--- a/src/Components/Form.module.css
+++ b/src/Components/Form.module.css
@@ -1,7 +1,8 @@
 .title {
     text-align: center;
+    margin-top: 2rem;
     margin-bottom: 2rem;
-    margin-top: 3rem;
     font-size: 3em;
+    color:rgb(34, 29, 201) ;
 }
 
