--- a/src/Pages/Clients.module.css
+++ b/src/Pages/Clients.module.css
@@ -4,23 +4,18 @@
     border: none;
     color: aliceblue;
     border-radius: 5%;
-    height: 2.5em;
-    width: 10em;
+    height: 5.5em;
+    width: 20em;
     cursor: pointer;
     text-align: center;
-    margin-top: 1em;
+    margin: auto;
+    text-decoration: none;
+    color: rgb(210, 215, 219);
+    font-weight: bold;
 }
 
 .button:hover {
     background-color:rgb(124, 128, 131);
-}
-
-.button_text {
-    text-decoration: none;
-    color: rgb(210, 215, 219);
-    font-weight: bold;
-    padding: 10px;
-}
-.button_text:hover {
     color: white;
 }
+
