--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -2,7 +2,7 @@
 .container {
     width: 30%;
     margin: auto;
-    padding: 200rem;
+    padding: 2rem;
     background-color: rgb(248, 242, 242);  
     border-radius: 5%;
 }
@@ -12,6 +12,7 @@
     margin-bottom: 1.5rem;
     font-size: 3em;
     color: #816882;
+    font-family: 'Caveat', cursive;
 }
 
 .button {
@@ -84,6 +85,10 @@
     .button {
         height: 2.5em;
         width: 28.5em;
+    }
+    .title {
+        font-size: 3.5em;
+        font-weight: bold;
     }
 }
 
