feat: estilizando tabela, form e detalhes

--- a/src/Components/Form.module.css
+++ b/src/Components/Form.module.css
@@ -4,7 +4,7 @@
     margin-bottom: 2rem;
     font-size: 5em;
     margin-bottom: 1.5rem;
-    color: #816882;
+    color: rgb(235, 227, 227);
     font-family: 'Caveat', cursive;
 }
 
