--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -84,6 +84,21 @@
     }
     .button {
         height: 2.5em;
+        width: 20.5em;
+    }
+    .title {
+        font-size: 3.5em;
+        font-weight: bold;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .container {
+        width: 38%;
+        padding: 2em;
+        height: 65%;
+    }
+    .button {
+        height: 2.5em;
         width: 28.5em;
     }
     .title {
@@ -91,4 +106,5 @@
         font-weight: bold;
     }
 }
+
 
