--- a/src/Pages/Clients.module.css
+++ b/src/Pages/Clients.module.css
@@ -1,11 +1,13 @@
-
+.link {
+    width: 6em;
+}
 .button {
     background-color:#816882;
     border: none;
     color: aliceblue;
     border-radius: 5%;
     height: 2.5em;
-    width: 10em;
+    width: 6em;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -18,6 +20,7 @@
     background-color:rgb(124, 128, 131);
     color: white;
 }
+
 
 @media screen and (min-width: 375px){
     .button{
